// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`корректный рендеринг с ошибкой 1`] = `
<div
  className="mainCenterblock"
>
  <div
    className="centerblockSearch"
  >
    <svg
      className="searchSvg"
    >
      <use
        xlinkHref="/img/icon/sprite.svg#icon-search"
      />
    </svg>
    <input
      className="searchText"
      name="search"
      onChange={[Function]}
      placeholder="Поиск"
      type="search"
    />
  </div>
  <h2
    className="centerblockHeader"
  >
    Треки
  </h2>
  <div
    className="centerblockFilter"
  >
    <div
      className="filterTitle"
    >
      Искать по:
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        исполнителю
      </div>
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        году выпуска
      </div>
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        жанру
      </div>
    </div>
  </div>
  <div
    className="error"
  >
    Произошла ошибка
  </div>
  <div
    className="noTracks"
  >
    Треки не найдены
  </div>
</div>
`;

exports[`корректный рендеринг треков и заголовков 1`] = `
<div
  className="mainCenterblock"
>
  <div
    className="centerblockSearch"
  >
    <svg
      className="searchSvg"
    >
      <use
        xlinkHref="/img/icon/sprite.svg#icon-search"
      />
    </svg>
    <input
      className="searchText"
      name="search"
      onChange={[Function]}
      placeholder="Поиск"
      type="search"
    />
  </div>
  <h2
    className="centerblockHeader"
  >
    Test Title
  </h2>
  <div
    className="centerblockFilter"
  >
    <div
      className="filterTitle"
    >
      Искать по:
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        исполнителю
      </div>
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        году выпуска
      </div>
    </div>
    <div
      className="filterWrapper"
    >
      <div
        className="filterButton"
        onClick={[Function]}
      >
        жанру
      </div>
    </div>
  </div>
  <div
    className="centerblockContent"
  >
    <div
      className="contentTitle"
    >
      <div
        className="playlistTitleCol col01"
      >
        Трек
      </div>
      <div
        className="playlistTitleCol col02"
      >
        Исполнитель
      </div>
      <div
        className="playlistTitleCol col03"
      >
        Альбом
      </div>
      <div
        className="playlistTitleCol col04"
      >
        <svg
          className="playlistTitleSvg"
        >
          <use
            xlinkHref="/img/icon/sprite.svg#icon-watch"
          />
        </svg>
      </div>
    </div>
    <div
      className="contentPlaylist"
    >
      <div
        className="playlistItem"
      >
        <div
          className="playlistTrack"
        >
          <div
            className="trackTitle"
            onClick={[Function]}
          >
            <div
              className="trackTitleImage"
            >
              <svg
                className="trackTitleSvg"
              >
                <use
                  xlinkHref="/img/icon/sprite.svg#icon-note"
                />
              </svg>
            </div>
            <div
              className="track__title-text"
            >
              <span
                className="trackTitleLink"
              >
                Test Track 1
                <span
                  className="trackTitleSpan"
                />
              </span>
            </div>
          </div>
          <div
            className="trackAuthor"
          >
            <span
              className="trackAuthorLink"
            >
              Test Artist 1
            </span>
          </div>
          <div
            className="trackAlbum"
          >
            <span
              className="trackAlbumLink"
            >
              Test Album 1
            </span>
          </div>
          <div
            onClick={[Function]}
          >
            <svg
              className="trackTimeSvg"
            >
              <use
                xlinkHref="/img/icon/sprite.svg#icon-dislike"
              />
            </svg>
            <span
              className="trackTimeText"
            >
              03:20
            </span>
          </div>
        </div>
      </div>
      <div
        className="playlistItem"
      >
        <div
          className="playlistTrack"
        >
          <div
            className="trackTitle"
            onClick={[Function]}
          >
            <div
              className="trackTitleImage"
            >
              <svg
                className="trackTitleSvg"
              >
                <use
                  xlinkHref="/img/icon/sprite.svg#icon-note"
                />
              </svg>
            </div>
            <div
              className="track__title-text"
            >
              <span
                className="trackTitleLink"
              >
                Test Track 2
                <span
                  className="trackTitleSpan"
                />
              </span>
            </div>
          </div>
          <div
            className="trackAuthor"
          >
            <span
              className="trackAuthorLink"
            >
              Test Artist 2
            </span>
          </div>
          <div
            className="trackAlbum"
          >
            <span
              className="trackAlbumLink"
            >
              Test Album 2
            </span>
          </div>
          <div
            onClick={[Function]}
          >
            <svg
              className="trackTimeSvg"
            >
              <use
                xlinkHref="/img/icon/sprite.svg#icon-dislike"
              />
            </svg>
            <span
              className="trackTimeText"
            >
              03:30
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
